NuGet Package added: SQLite.

--- a/XamarindotNETExample/XamarindotNETExample/HomePage.xaml
+++ b/XamarindotNETExample/XamarindotNETExample/HomePage.xaml
@@ -5,7 +5,8 @@
     xmlns:local="clr-namespace:XamarindotNETExample"
     x:Class="XamarindotNETExample.HomePage">
     <TabbedPage.ToolbarItems>
-        <ToolbarItem Text="ADD" Clicked="AddTravel"/>
+        <ToolbarItem Text="ADD"
+                     Clicked="AddTravel" />
     </TabbedPage.ToolbarItems>
     <local:HistoryPage Title="History" />
     <local:MapPage Title="Map" />
