Post's CRUD operations added.

--- a/XamarindotNETExample/XamarindotNETExample/HistoryPage.xaml
+++ b/XamarindotNETExample/XamarindotNETExample/HistoryPage.xaml
@@ -4,9 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="XamarindotNETExample.HistoryPage">
     <ContentPage.Content>
-        <StackLayout HorizontalOptions="Center"
-                     VerticalOptions="Center">
-            <Label Text="Welcome to History page." />
-        </StackLayout>
+        <ListView x:Name="postListView"
+                  ItemSelected="Handle_ItemSelected">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Experience}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </ContentPage.Content>
 </ContentPage>
